--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          </p>
          <a class="button1 yellow" href="#introduction">会員登録</a>
        </div>
-       <div class="intro1-image">
+       <div class="intro1-image" class="intro2">
         <img src="images/introduction_002.jpg" alt="" width="500">
     </div>
      </div>
@@ -70,7 +70,7 @@
             <!-- <div class="course-frame-inner ">   -->
                 <div class="course-box">
                     <div class="course-img">
-                        <img src="images/html.png" height="100" alt="">
+                        <img src="images/html.png"  height="100" alt="">
                     </div>
                     <p>HTMLコース</p>
                     <a href="" id="html">このコースを受ける</a> 
@@ -137,11 +137,13 @@
     <section>
      <section id="access" class="fuwat">
         <h2>Access</h2>
+        <div class="googlemap">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3131287759825!2d135.49025991523217!3d34.697281280435405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6f359905ed7%3A0x9fec1659611f776f!2zTGlmZSBpcyBUZWNoISDlpKfpmKrjgqrjg5XjgqPjgrk!5e0!3m2!1sja!2sjp!4v1662688014846!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-     </section>
-     <footer>
-        <p>@2019 Happy Hack Inc.</p>
-     </footer>
+            </section>
+             <footer>
+              <p>@2019 Happy Hack Inc.</p>
+           </footer>
+        </div>
     </section>
 </body>
 </html>
