--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Happyhack!</title>
-    <link rel="stylesheet" href="particle.css">
-    <link rel="stylesheet" href="slick.css">
-    <link rel="stylesheet" href="slick-theme.css">
-    <link rel="stylesheet" href="style.css">
+
     <link rel="icon" href="images/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
     <!-- stats.js lib --> 
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src="js/jquery.bgswitcher.js"></script>
-    <script src="js/particles.js"></script>
+    <script src="js/particles.js-master/particles.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
+
+    <link rel="stylesheet" href="particle.css">
+    <link rel="stylesheet" href="slick.css">
+    <link rel="stylesheet" href="slick-theme.css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -50,7 +52,7 @@
           <a class="button1" href="#introduction">会員登録</a>
         </div>
       </div>
-      <div class="intro_1">
+      <div class="intro_1 second">
         <div class="intro1-caption moji" >
          <p>    
             Happy Hackでは「楽しさ」と「真剣さ」をモットーにプログラミングを学びます。コースは全部で7つ準備をしています。<br>
@@ -59,7 +61,7 @@
          </p>
          <a class="button1 yellow" href="#introduction">会員登録</a>
        </div>
-       <div class="intro1-image" class="intro2">
+       <div class="intro1-image intro2">
         <img src="images/introduction_002.jpg" alt="" width="500">
     </div>
      </div>
@@ -67,59 +69,57 @@
     <section id="courses" class="fuwat">
         <h2>Courses</h2>
         <div class="course-frame">
-            <!-- <div class="course-frame-inner ">   -->
+            <div class="course-frame-inner ">  
                 <div class="course-box">
                     <div class="course-img">
-                        <img src="images/html.png"  height="100" alt="">
+                        <img src="images/html.png"   alt="">
                     </div>
                     <p>HTMLコース</p>
                     <a href="" id="html">このコースを受ける</a> 
                 </div>
                 <div class="course-box">
                     <div class="course-img">
-                        <img src="images/css.png" height="100" alt="">
+                        <img src="images/css.png"  alt="">
                     </div>
                     <p>CSSコース</p>
                     <a href="" id="css">このコースを受ける</a> 
                 </div>
                 <div class="course-box">
                     <div class="course-img">
-                        <img src="images/unity.png" height="100" alt="">
+                        <img src="images/unity.png"  alt="">
                     </div>
                     <p>Unityコース</p>
                     <a href="" id="unity">このコースを受ける</a> 
                 </div>
                 <div class="course-box">
                     <div class="course-img">
-                        <img src="images/ruby.png" height="100" alt="">
+                        <img src="images/ruby.png"  alt="">
                     </div>
                     <p>Rubyコース</p>
                     <a href="" id="ruby">このコースを受ける</a> 
                 </div>
-            <!-- </div> -->
-            <!-- <div class="course-frame-inner"> -->
                 <div class="course-box">
                     <div class="course-img">
-                        <img src="images/js.png" height="100" alt="">
+                        <img src="images/js.png"  alt="">
                     </div>
                     <p>JavaScriptコース</p>
                     <a href="" id="js">このコースを受ける</a> 
                 </div>
                 <div class="course-box">
                     <div class="course-img">
-                        <img src="images/swift.png" height="100" alt="">
+                        <img src="images/swift.png"  alt="">
                     </div>
                     <p>Swiftコース</p>
                     <a href="" id="swift">このコースを受ける</a> 
                 </div>
                 <div class="course-box">
                     <div class="course-img">
-                        <img src="images/go.png" height="100" alt="">
+                        <img src="images/go.png"  alt="">
                     </div>
                     <p>Goコース</p>
                     <a href="" id="go">このコースを受ける</a> 
                 </div>
-            <!-- </div> -->
+            </div>
         </div>
     </section>    
 
